--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "content_scripts": [
         {
             "matches": [
-                "*://www.coursera.org/learn/*lecture*"
+                "*://www.coursera.org/*"
             ],
             "js": [
                 "subtitle.js"
