--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "version": "1.0",
     "browser_action": {
         "default_icon": "icon.png",
-        "default_title": "开启/关闭coursera双字幕",
+        "default_title": "为coursera视频添加更多字幕",
         "default_popup": "popup.html"
     },
     "content_scripts": [{
